--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -52,6 +52,8 @@
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-controller="Foods" asp-action="Index">Foods</a></li>
+
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
