--- a/src/WebApplication4/Views/Account/Login.cshtml
+++ b/src/WebApplication4/Views/Account/Login.cshtml
@@ -8,105 +8,75 @@
     ViewData["Title"] = "Log in";
 }
 
+<h2>@ViewData["Title"].</h2>
 
-
-<div class="row">
-    <div class="col-sm-6 col-sm-offset-3 form-box">
-        <section>
-            <h1><strong>Login</strong></h1>
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <div class="form-top-left">
-                    <p>Enter your username and password to log on:</p>
-                    <div class="form-bottom">
-                        <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="Email" class="col-md-2 control-label"></label>
-                                <input asp-for="Email" class="form-username form-control"/>
-                                <span asp-validation-for="Email" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Password" class="col-md-2 control-label"></label>
-                       
-                                <input asp-for="Password"  class="form-password form-control" />
-                                <span asp-validation-for="Password" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <div class="checkbox">
-                                    <input asp-for="RememberMe" />
-                                    <label asp-for="RememberMe"></label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <button type="submit" class="btn btn-default">Log in</button>
-                        </div>
-                    </div>
-                    <p>
-                        <a asp-action="Register">Register as a new user?</a>
-                    </p>
-                    <p>
-                        <a asp-action="ForgotPassword">Forgot your password?</a>
-                    </p>
-                </div>
-            </form>
-            <hr />
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section>
-            <div class="row">
-                <div class="col-sm-6 col-sm-offset-3 social-login">
-                    <h3>...or login with:</h3>
-                    <div class="social-login-buttons">
-                        <a class="btn btn-link-1 btn-link-1-facebook" href="#">
-                            <i class="fa fa-facebook"></i> Facebook
-                        </a>
-                        <a class="btn btn-link-1 btn-link-1-twitter" href="#">
-                            <i class="fa fa-twitter"></i> Twitter
-                        </a>
-                        <a class="btn btn-link-1 btn-link-1-google-plus" href="#">
-                            <i class="fa fa-google-plus"></i> Google Plus
-                        </a>
-                    </div>
-                </div>
+<div>
+    <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+        <h4>Please enter your username and password.</h4>
+        <hr />
+        <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <!--<hr />
+        </div>
+        <div class="form-group">
+            <label asp-for="Password" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="submit" class="btn btn-default">Log in</button>
+            </div>
+        </div>
+    </form>
+
+    <div class="col-md-offset-2 col-md-10">
+        <a class="btn btn-default" href="#">
+           Facebook
+        </a>
+        <a class="btn btn-default" href="#">
+            Twitter
+        </a>
+        <a class="btn btn-default" href="#">
+            Google Plus
+        </a>
+    </div>
+
+ </div>
+
+        <!--<hr />
+        {
+            var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
+            if (loginProviders.Count == 0)
             {
-                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-                if (loginProviders.Count == 0)
-                {
+                <div>
+                    <p>
+                        There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                        for details on setting up this ASP.NET application to support logging in via external services.
+                    </p>
+                </div>
+            }
+            else
+            {
+                <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
                     <div>
                         <p>
-                            There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
+                            foreach (var provider in loginProviders)
+                            {
+                                <button type="submit" class="btn btn-default" name="provider" value="provider.AuthenticationScheme" title="Log in using your provider.DisplayName account">provider.AuthenticationScheme</button>
+                            }
                         </p>
                     </div>
-                }
-                else
-                {
-                    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                        <div>
-                            <p>
-                                foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="provider.AuthenticationScheme" title="Log in using your provider.DisplayName account">provider.AuthenticationScheme</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }-->
-        </section>
-    </div>
-</div>
+                </form>
+            }
+        }-->
 
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+        @section Scripts {
+            @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+        }
