--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                                 <i class="fa fa-facebook"></i> Facebook
                             </a>
                             <a class="btn btn-link-1 btn-link-1-twitter" href="#">
-                                <i class="fa fa-twitter"></i> Twitter
+                                <i class="fa fa-twitter"></i> TwitterINI
                             </a>
                             <a class="btn btn-link-1 btn-link-1-google-plus" href="#">
                                 <i class="fa fa-google-plus"></i> Google Plus
@@ -70,15 +70,5 @@
         </div>
 
     </div>
-
-    <!-- Javascript -->
-    <script src="assets/js/jquery-1.11.1.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.backstretch.min.js"></script>
-    <script src="assets/js/scripts.js"></script>
-
-    <!--[if lt IE 10]>
-        <script src="assets/js/placeholder.js"></script>
-    <![endif]-->
 </body>
 </html>
