--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
     </head>
-    <body>
+    <body background ="images/food_delicious_set_many_different_88293_602x339.jpg">
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
