background image change in css and the main page modification has begun.

--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
     </head>
-    <body background ="images/food_delicious_set_many_different_88293_602x339.jpg">
+    <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -45,6 +45,8 @@
     
         <div class="container body-content">
             @RenderBody()
+            <h1>Weight Loss Helper 2.0 </h1>
+            <h3> The best application for tracking your calories</h3>
             <hr />
             <footer>
                 <p>&copy; 2016 - Weight Loss Helper</p>
