--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="top-content">
-        
+        <h1>Weight Loss Helper 2.0 </h1>
+        <h3>
+            This Application  would help the users to lose weight by keeping a diary of their weight, ingested calories,
+            physical exercise, etc. The results achieved through a period of time.
+        </h3>       
+          
     </div>
 </body>
 </html>
