--- a/src/WebApplication4/wwwroot/assets/bootstrap/css/bootstrap.css
+++ b/src/WebApplication4/wwwroot/assets/bootstrap/css/bootstrap.css
@@ -11,7 +11,7 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-
+    
     margin: 0;
 }
 article,
@@ -1083,14 +1083,15 @@ th {
 }
 html {
   font-size: 10px;
-
+   color: #FFFFFF;
+  
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
+  color: #FFFFFF;
   background-color: #fff;
 }
 input,
@@ -1582,6 +1583,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  color: #ddd;
 }
 @media (min-width: 768px) {
   .container {
