User Profile - Mange - Index

--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -10,9 +10,10 @@
 <body>
     <div class="top-content">
         <h1>Weight Loss Helper 2.0 </h1>
-        <h4>
+        <h4 id="content">
             This Application  would help the users to lose weight by keeping a diary of their weight, ingested calories,
             physical exercise, etc. The results achieved through a period of time.
+
         </h4>       
           
     </div>
