--- a/src/WebApplication4/Views/Manage/Index.cshtml
+++ b/src/WebApplication4/Views/Manage/Index.cshtml
@@ -7,6 +7,21 @@
 <p class="text-success">@ViewData["StatusMessage"]</p>
 
 <div>
+   <h4>Profile</h4>
+    <hr />
+        <dt>Name</dt>
+        <dt>Age</dt>
+        <dt>Height</dt>
+        <h2dtWeight</h2>
+        <dt>Sex</dt>
+        <dt>Email</dt>
+        
+        <div class="personal_container">
+
+        </div>
+
+</div>
+<div>
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
