--- a/src/WebApplication4/wwwroot/css/site.css
+++ b/src/WebApplication4/wwwroot/css/site.css
@@ -46,3 +46,11 @@ textarea {
         z-index: 10 !important;
     }
 }
+
+#content {
+    text-align:center;
+    height: 10em;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
