--- a/src/WebApplication4/Views/Manage/Index.cshtml
+++ b/src/WebApplication4/Views/Manage/Index.cshtml
@@ -12,7 +12,7 @@
         <dt>Name</dt>
         <dt>Age</dt>
         <dt>Height</dt>
-        <h2dtWeight</h2>
+        <dt></dt>Weight</h2>
         <dt>Sex</dt>
         <dt>Email</dt>
         
