--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -36,8 +36,11 @@
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                         <li><a asp-controller="Foods" asp-action="Index">Foods</a></li>
-                        <li><a asp-controller="FoodCalculators" asp-action="Create">FoodCalculator</a></li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
 
+                            <li><a asp-controller="FoodCalculators" asp-action="Create">FoodCalculator</a></li>
+                        }
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
