Contact and About Page

--- a/src/WebApplication4/Views/Home/Contact.cshtml
+++ b/src/WebApplication4/Views/Home/Contact.cshtml
@@ -2,16 +2,18 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<!--<h3>@ViewData["Message"]</h3> -->
+<h3 style="text-align:center">Cloud Computing MEICM </h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Rua General Norton de Matos,<br />
+    Apartado 4133, <br />
+    2411-901 Leiria – Portugal<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    (+351) 244830010
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:ipleiria@ipleiria.pt">ipleiria@ipleiria.pt</a><br />
+    
 </address>
