--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -7,25 +7,19 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
+<form  asp-controller="FoodCalculators" asp-action="Create" >
     <div class="form-horizontal">
         <h4>FoodCalculator</h4>
         <hr />
         <div asp-validation-summary="ValidationSummary.ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="calculator.FoodName" class="col-md-2 control-label"></label>
             <!--<div class="col-md-10">
                 <input asp-for="FoodName" class="form-control" />
                 <span asp-validation-for="FoodName" class="text-danger" />
             </div>-->
-            <div class="col-md-10">
-                <select style="color:#000000" name="foods" class="form-control">
-                    @foreach (var food in Model.allFood)
-                    {
-                        <option style="color:#000000">@food.Name</option>
-                    }
-
-                </select>
+            <label asp-for="calculator.FoodName" class="col-md-2 control-label"></label>
+            <div style="color:black" class="col-md-10">
+                @Html.DropDownListFor(m => Model.foodId, Model.selectList);
             </div>
         </div>
         <div class="form-group">
