--- a/src/WebApplication4/Views/Home/About.cshtml
+++ b/src/WebApplication4/Views/Home/About.cshtml
@@ -2,6 +2,14 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<!--<h3>@ViewData["Message"]</h3> -->
 
-<p>Use this area to provide additional information.</p>
+<h2> Master Degree in Computer Engineering and Mobile Computing 2015-2016</h2>
+<h3 style="text-align:center;font-weight:bold">Cloud Commputing</h3>
+
+<h4 style="font-weight:bold;padding-top:20px">Group Integration:</h4>
+<ul>Clifton Clunie</ul>
+<ul>Diogo Bernado</ul>
+<ul>Ruben Ferreria</ul>
+
+<p style="padding-top:100px">Use this area to provide additional information.</p>
