--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -18,9 +18,38 @@
         <h4 id="content">
             This Application  would help the users to lose weight by keeping a diary of their weight, ingested calories,
             physical exercise, etc. The results achieved through a period of time.
-
-        </h4>       
-          
+        </h4>    
+        
+        <table class="table table-bordered" style="background-color:#F8F8F8">
+            <thead style="color:black">
+                <tr>
+                    <th>Food Name</th>
+                    <th>Food quantity</th>
+                    <th>Calories</th>
+                    <th>Lipids</th>
+                </tr>
+            </thead>
+            <tbody style="color:black">
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>a</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>a</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>a</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
