--- a/src/WebApplication4/Views/Account/Register.cshtml
+++ b/src/WebApplication4/Views/Account/Register.cshtml
@@ -26,14 +26,14 @@
         <div class="form-group">
             <label asp-for="Height" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Height" class="form-control" />
+                <input asp-for="Height"  class="form-control" /> (cm)
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Weight" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Weight" class="form-control" />
+                <input asp-for="Weight" class="form-control" /> (Kg)
                 <span asp-validation-for="Weight" class="text-danger"></span>
             </div>
         </div>
