--- a/src/WebApplication4/Views/Manage/ChangeInfo.cshtml
+++ b/src/WebApplication4/Views/Manage/ChangeInfo.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ChangeInfoViewModel
+@{
     ViewData["Title"] = "Change physical Information";
 }
 
@@ -7,27 +8,29 @@
 <form asp-controller="Manage" asp-action="ChangeInfo" method="post" class="form-horizontal" role="form">
     <h4>Change Info Form</h4>
     <hr />
-   <!--  <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+ <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
     <div class="form-group">
+        <div class="form-group">
+            <label asp-for="New_Height" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="New_Height" class="form-control" /> (cm)
+                <span asp-validation-for="New_Height" class="text-danger"></span>
+            </div>
+        </div>
+
         <label asp-for="New_Weight" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="New_Weight" class="form-control" />
+            <input asp-for="New_Weight" class="form-control" /> (Kg)
             <span asp-validation-for="New_Weight" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group">
-        <label asp-for="New_Height" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="New_Height" class="form-control" />
-            <span asp-validation-for="New_Height" class="text-danger"></span>
-        </div>
-    </div>
+    
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Change Info </a></button>
+            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span> Change Info </a></button>
         </div>
-    </div> -->
+    </div> 
 </form>
 
 @section Scripts {
