--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                        <li><a asp-controller="Foods" asp-action="Index">Foods</a></li>
+                        <!--<li><a asp-controller="Foods" asp-action="Index">Foods</a></li> -->
                         @if (User.Identity.IsAuthenticated)
                         {
 
