--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -50,10 +50,12 @@
         <div class="container body-content">
             @RenderBody()
        
-          <hr />
-            <footer>
-                <p>&copy; 2016 - Weight Loss Helper</p>
-            </footer>
+            <hr />
+            <div class="top-left col-md-12">
+                <footer>
+                    <p>&copy; 2016 - Weight Loss Helper</p>
+                </footer>
+            </div>
         </div>
 
         <environment names="Development">
