--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                     <thead style="color:black">
                         <tr>
                             <th>Food</th>
-                            <th>Quantity</th>
+                            <th>Quantity (gr)</th> 
                             <th>Lipids</th>
                             <th>Caloiries</th>
                             <th>Date</th>
@@ -102,10 +102,10 @@
                             <tr>
                                 
                                 <td>
-                                    @Html.DisplayFor(modelItem => regist.FoodName) Kg
+                                    @Html.DisplayFor(modelItem => regist.FoodName)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => regist.Grams)
+                                    @Html.DisplayFor(modelItem => regist.Grams) 
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => regist.Lipid)
