--- a/src/WebApplication4/Views/Manage/ChangeInfo.cshtml
+++ b/src/WebApplication4/Views/Manage/ChangeInfo.cshtml
@@ -1,27 +1,27 @@
-﻿@model ChangeInfoViewModel
+﻿@model PhysicalInfoRecord
 @{
     ViewData["Title"] = "Change physical Information";
 }
 
 <h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Manage" asp-action="ChangeInfo" method="post" class="form-horizontal" role="form">
+<form asp-controller="PhysicalInfoRecords" asp-action="Create" method="post" class="form-horizontal" role="form">
     <h4>Change Info Form</h4>
     <hr />
  <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
     <div class="form-group">
         <div class="form-group">
-            <label asp-for="New_Height" class="col-md-2 control-label"></label>
+            <label asp-for="height" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="New_Height" class="form-control" /> (cm)
-                <span asp-validation-for="New_Height" class="text-danger"></span>
+                <input asp-for="height" class="form-control" /> (cm)
+                <span asp-validation-for="height" class="text-danger"></span>
             </div>
         </div>
 
-        <label asp-for="New_Weight" class="col-md-2 control-label"></label>
+        <label asp-for="weight" class="col-md-2 control-label"></label>
         <div class="col-md-10">
-            <input asp-for="New_Weight" class="form-control" /> (Kg)
-            <span asp-validation-for="New_Weight" class="text-danger"></span>
+            <input asp-for="weight" class="form-control" /> (Kg)
+            <span asp-validation-for="weight" class="text-danger"></span>
         </div>
     </div>
     
