Calories and Lipds -> table food calculator done

--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -40,6 +40,9 @@
                 <div class="col-md-10">
                     <input id="SearchString" type="text" class="span12 form-control" placeholder="Search Food Name" autocomplete="off" />
                     @Html.Hidden("IdComida")
+                    @Html.Hidden("Lipidos")
+                    @Html.Hidden("Calorias")
+
                 </div>
             </div>
 
@@ -89,7 +92,7 @@
         </div>
             -->
 
-        <div class="top-right table-responsive col-md-8">
+        <div class="top-right table-responsive col-md-10">
             <h3>Food Calculator</h3>
             <table id="tbFood" class="table" style="background-color:#F8F8F8">
                 <thead style="color:black">
@@ -144,13 +147,15 @@
                         data: { searchstring: request.term },
                         success: function (data) {
                             response($.map(data, function (item) {
-                                return { label: item.Name, value: item.Id };
+                                return { label: item.Name, label1: item.Lipidos, label2: item.Calorias, value: item.Id, };
                             }))
                         }
                     })
                 },
                 select: function (event, ui) {
                     $("#SearchString").val(ui.item.label);
+                    $("#Lipidos").val(ui.item.label1)
+                    $("#Calorias").val(ui.item.label2)
                     $("#IdComida").val(ui.item.value);
 
                     return false;
@@ -166,13 +171,16 @@
             });
         });
 
-
         $('#addFood').click(function () {
-
             var cnt = document.getElementById("SearchString").value;
             var cnt1 = document.getElementById("idFoodQt").value;
-            $('#tbFoodB').append('<tr class="child"><td>' + cnt + '<\/td><td>' + cnt1 + '  </td></tr>');
+            var cnt2 = document.getElementById("Lipidos").value;
+            var cnt3 = document.getElementById("Calorias").value;
 
+            var ruleLipids = (cnt1 * cnt2 ) /100;
+            var ruleCalories = (cnt1 * cnt3) / 100; 
+       
+            $('#tbFoodB').append('<tr class="child"><td>' + cnt + '<\/td><td>' + cnt1 + ' </td><td>' + ruleLipids + '  </td><td>' + ruleCalories+ '  </td</tr>');
             //Remove -> o botão .remF ainda nao existe 
             /*  $('#tbFood').on('click', '.remF', function () {
                 $(this).parent().parent().remove();
@@ -181,5 +189,7 @@
             }); */
                                   
         });
+
+
     </script>
 }
